feature: Added `meta` tags.
Added some new meta tags to help search engines better understand the
site.

Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/site/prod/index.html
+++ b/site/prod/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="A JavaScript password generator" />
+    <meta name="application-name" content="simplePass" />
+    <meta name="application-url" content="https://staticbanter.github.io/simplePass/" />
+    <meta name="creator" content="staticBanter" />
+    <meta name="keywords" content="javascript,password-generator,progressive-web-application" />
+    <meta name="description" content="A JavaScript password generator." />
     <meta name="theme-color" content="#130E1E"/>
+    <meta name="robots" content="index, follow, max-snippet:30" />
+    <meta name="thumbnail" content="./storage/icons/simplePass-Logo-1080.png" />
 
     <!--Open Graph Protocol Meta Data-->
     <meta property="og:title" content="simplePass | Demo" />
@@ -26,11 +32,11 @@
 
     <!--Chrome-->
     <meta name="mobile-web-application-capable" content="yes" />
-    <meta name="application-name" content="simplePass" />
 
     <!--Win8 Support-->
     <meta name="msapplication-TileColor" content="#130E1E" />
     <meta name="msapplication-TileImage" content="./storage/icons/simplePass-Logo-512.png" />
+    <meta name="msapplication-tooltip" content="simplePass Password Generator" />
 
     <title>simplePass | Demo</title>
     <script type="module" src="./main.js"></script>
