feat: Added support for Latin Extended B characters.
* The ```range``` function can now return a list containing individual
array elements.

Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/site/prod/index.html
+++ b/site/prod/index.html
@@ -252,6 +252,21 @@
                     <input type="checkbox" form="sp_form" name="ligature_extended_a" />
                 </label>
             </fieldset>
+            <fieldset>
+                <legend>Latin Extended B</legend>
+                <label> Lowercase Characters:
+                    <input type="checkbox" form="sp_form" name="lowercase_extended_b" />
+                </label>
+                <label> Uppercase Characters:
+                    <input type="checkbox" form="sp_form" name="uppercase_extended_b" />
+                </label>
+                <label> Mixed-Case Characters:
+                    <input type="checkbox" form="sp_form" name="mixedcase_extended_b" />
+                </label>
+                <label> Insensitive-Case Characters:
+                    <input type="checkbox" form="sp_form" name="insensitivecase_extended_b" />
+                </label>
+            </fieldset>
         </form>
         <!-- <button class="add-button">Add to home screen</button> -->
     </main>
