feat: Added support for 'Modifier Letter' characters
Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/site/prod/index.html
+++ b/site/prod/index.html
@@ -267,6 +267,15 @@
                     <input type="checkbox" form="sp_form" name="insensitivecase_extended_b" />
                 </label>
             </fieldset>
+            <fieldset>
+                <legend>Modifier Letters</legend>
+                <label>Characters:
+                    <input type="checkbox" form="sp_form" name="character_modifier_letters"/>
+                </label>
+                <label>Symbols:
+                    <input type="checkbox" form="sp_form" name="symbol_modifier_letters"/>
+                </label>
+            </fieldset>
         </form>
         <!-- <button class="add-button">Add to home screen</button> -->
     </main>
