feature: Added support for 'Greek and Coptic' characters
**Misc**
- Set ```font-kerning:none``` and ```font-variant-ligatures:
no-common-ligatures``` on the ```#displayPassword``` element. This
should help ensure clarity when reading the symbols.

Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/site/prod/index.html
+++ b/site/prod/index.html
@@ -276,6 +276,21 @@
                     <input type="checkbox" form="sp_form" name="symbol_modifier_letters"/>
                 </label>
             </fieldset>
+            <fieldset>
+                <legend>Greek And Coptic</legend>
+                <label>Lowercase Characters:
+                    <input type="checkbox" form="sp_form" name="lowercase_greek_coptic" />
+                </label>
+                <label>Uppercase Characters:
+                    <input type="checkbox" form="sp_form" name="uppercase_greek_coptic" />
+                </label>
+                <label> Insensitive-Case Characters:
+                    <input type="checkbox" form="sp_form" name="insensitivecase_greek_coptic" />
+                </label>
+                <label>Symbols:
+                    <input type="checkbox" form="sp_form" name="symbol_greek_coptic" />
+                </label>
+            </fieldset>
         </form>
         <!-- <button class="add-button">Add to home screen</button> -->
     </main>
