feat: Added support for the Cyrillic character set.
Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/site/prod/index.html
+++ b/site/prod/index.html
@@ -291,6 +291,21 @@
                     <input type="checkbox" form="sp_form" name="symbol_greek_coptic" />
                 </label>
             </fieldset>
+            <fieldset>
+                <legend>Cyrillic</legend>
+                <p>
+                    <strong>Note</strong>: This set excludes '<em>Combination Characters</em>' (decimal values: 1155-1161), because they are illegible when they are the only characters selected and can be hard to decern when combined with other characters.
+                </p>
+                <label> Lowercase Characters:
+                    <input type="checkbox" form="sp_form" name="lowercase_cyrillic" />
+                </label>
+                <label> Uppercase Characters:
+                    <input type="checkbox" form="sp_form" name="uppercase_cyrillic" />
+                </label>
+                <label> Symbols:
+                    <input type="checkbox" form="sp_form" name="symbols_cyrillic" />
+                </label>
+            </fieldset>
         </form>
         <!-- <button class="add-button">Add to home screen</button> -->
     </main>
