feat: Added support for the Cyrillic Supplement character set.
Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/site/prod/index.html
+++ b/site/prod/index.html
@@ -296,14 +296,26 @@
                 <p>
                     <strong>Note</strong>: This set excludes '<em>Combination Characters</em>' (decimal values: 1155-1161), because they are illegible when they are the only characters selected and can be hard to decern when combined with other characters.
                 </p>
-                <label> Lowercase Characters:
+                <label>Lowercase Characters:
                     <input type="checkbox" form="sp_form" name="lowercase_cyrillic" />
                 </label>
-                <label> Uppercase Characters:
+                <label>Uppercase Characters:
                     <input type="checkbox" form="sp_form" name="uppercase_cyrillic" />
                 </label>
-                <label> Symbols:
+                <label>Symbols:
                     <input type="checkbox" form="sp_form" name="symbols_cyrillic" />
+                </label>
+            </fieldset>
+            <fieldset>
+                <legend>Cyrillic Supplement</legend>
+                <label>Lowercase Characters:
+                    <input type="checkbox" form="sp_form" name="lowercase_cyrillic_supplement" />
+                </label>
+                <label>Uppercase Characters:
+                    <input type="checkbox" form="sp_form" name="uppercase_cyrillic_supplement" />
+                </label>
+                <label>Miscellaneous Characters:
+                    <input type="checkbox" form="sp_form" name="misc_cyrillic_supplement" />
                 </label>
             </fieldset>
         </form>
