feat: service worker deletes old cache requests on activation.
**Feature**
- Added some alternate locale tags on the site index.

Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/site/prod/index.html
+++ b/site/prod/index.html
@@ -19,6 +19,12 @@
     <meta property="og:url" content="https://staticbanter.github.io/simplePass/" />
     <meta property="og:description" content="A JavaScript password generator." />
     <meta property="og:locale" content="en_CA" />
+    <meta property="og:locale:alternate" content="en_US" />
+    <meta property="og:locale:alternate" content="en_JM" />
+    <meta property="og:locale:alternate" content="en_US" />
+    <meta property="og:locale:alternate" content="en_GB" />
+    <meta property="og:locale:alternate" content="en_AU" />
+    <meta property="og:locale:alternate" content="en_IE" />
     <meta property="og:site_name" content="GitHub" />
 
     <!--iOS/Safari-->
