--- a/site/prod/index.html
+++ b/site/prod/index.html
@@ -174,6 +174,17 @@
                 <input type="text" form="sp_form" name="excludeCharacters" />
                 <p>* <strong>Warning</strong>: Excessive use of this feature may result in degraded performance or non-performance of the program. *</p>
             </label>
+            <label>Unique Characters Only
+                <input type="checkbox" form="sp_form" name="uniqueCharacters" >
+                <p>* This option can not be combined with the following modifiers:</p>
+                <ul>
+                    <li>Repeating Characters</li>
+                    <li>Whitespace Beginning/End (Required OR Optional)</li>
+                    <li>Whitespace Between Limit</li>
+                    <li>Pre-Configurations</li>
+                </ul>
+                <p>* <strong>Warning</strong> This option will lower your passwords Entropy.</p>
+            </label>
             <fieldset>
                 <legend>Repeat Characters</legend>
                 <div>
