ref: Additional key-words.
Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/site/prod/index.html
+++ b/site/prod/index.html
@@ -7,7 +7,7 @@
     <meta name="application-name" content="simplePass" />
     <meta name="application-url" content="https://staticbanter.github.io/simplePass/" />
     <meta name="creator" content="staticBanter" />
-    <meta name="keywords" content="javascript,password-generator,progressive-web-application" />
+    <meta name="keywords" content="javascript,js,password-generator,password,generator,progressive-web-application,pwa" />
     <meta name="description" content="A JavaScript password generator." />
     <meta name="theme-color" content="#130E1E"/>
     <meta name="robots" content="index, follow, max-snippet:30" />
