fix: missing `id` attribute resulting in `Uncaught Error Type`
Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/site/prod/index.html
+++ b/site/prod/index.html
@@ -59,7 +59,7 @@
     </header>
     <main>
         <div id="sp_passwordBox">
-            <div>
+            <div id="sp_passwordContainer">
                 <p>
                     <b>Password:</b>
                     <span id="sp_passwordParagraph"></span>
