fix: Incorrect styling of password text.
- There was also a bug in the `initializer` function that caused the
generated password text being appended incorrectly.

Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/site/prod/index.html
+++ b/site/prod/index.html
@@ -62,7 +62,7 @@
             <div id="sp_passwordContainer">
                 <p>
                     <b>Password:</b>
-                    <span id="sp_passwordParagraph"></span>
+                    <span id="sp_passwordParagraph" class="sp_password"></span>
                 </p>
                 <p>
                     Bits of Entropy: ~<span id="sp_passwordEntropy"></span>
