feat: Added 'Latin IPA Extension' support.
- Missing check for `modifier.uniqueCharacters` when only selecting a
single password modifier results in a continuous loop if you also
generate a password that has more characters than the selected modifiers
character-set.

Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/site/prod/index.html
+++ b/site/prod/index.html
@@ -300,6 +300,15 @@
                 </label>
             </fieldset>
             <fieldset>
+                <legend>Latin IPA Extension</legend>
+                <label> Lowercase Characters:
+                    <input type="checkbox" form="sp_form" name="lowercase_ipa_extension" >
+                </label>
+                <label> Uppercase Characters:
+                    <input type="checkbox" form="sp_form" name="uppercase_ipa_extension" >
+                </label>
+            </fieldset>
+            <fieldset>
                 <legend>Modifier Letters</legend>
                 <label>Characters:
                     <input type="checkbox" form="sp_form" name="character_modifier_letters">
