--- a/site/prod/index.html
+++ b/site/prod/index.html
@@ -66,8 +66,39 @@
     <link type="text/css" href="./main.css" rel="stylesheet" >
     <link rel="manifest" href="./manifest.json" >
     <link type="image/png" type="image/png" rel="icon" href="./storage/icons/simplePass-Logo-512.png">
+
+    <!-- JSON-LD(SEO) -->
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org/",
+            "@type": "SoftwareApplication",
+            "url" : "https://staticbanter.github.io/simplePass/",
+            "offers": {
+                "@type": "Offer",
+                "price": "0"
+            },
+            "applicationCategory": "SecurityApplication",
+            "name": "simplePass",
+        }
+    </script>
 </head>
 <body>
+    <!-- MicroData(SEO) -->
+    <div itemscope itemtype="https://schema.org/SoftwareApplication" hidden="hidden">
+        <span itemprop="name">simplePass</span> -
+        TYPE: <span itemprop="applicationCategory" content="SecurityApplication">SecurityApplication</span>
+        <div itemprop="offers" itemscope itemtype="https://schema.org/Offer">
+            Price: <span itemprop="price">0</span>
+        </div>
+    </div>
+    <!-- RDFa(SEO) -->
+    <div vocab="https://schema.org/" typeof="SoftwareApplication" hidden="hidden">
+        <span property="name">simplePass</span> -
+        TYPE: <span property="applicationCategory" content="SecurityApplication">SecurityApplication</span>
+        <div property="offers" typeof="Offer">
+            Price: <span property="price">0</span>
+        </div>
+    </div>
     <header>
         <h1>simplePass</h1>
         <nav>
