fix: trailing comma in JSON-LD data structure
Signed-off-by: staticBanter <76642517+staticBanter@users.noreply.github.com>

--- a/site/prod/index.html
+++ b/site/prod/index.html
@@ -78,7 +78,7 @@
                 "price": "0"
             },
             "applicationCategory": "SecurityApplication",
-            "name": "simplePass",
+            "name": "simplePass"
         }
     </script>
 </head>
