feat: Ability to check various compression values on string.
Can now check the byte length for various compression formats on the
password as well as calculate the average compression score. The
currently supported compression formats are gzip, deflate, and
deflate-raw. If these options are set simplePass will return a Promise
instead.

* Fixed the binary string textarea not hiding the binary string.
* Fixed incorrect displaying of the binary string textarea.

Signed-off-by: staticBanter <76642517+staticBanter@users.noreply.github.com>

--- a/site/src/index.html
+++ b/site/src/index.html
@@ -224,14 +224,31 @@
                             <span class="simplePass_binaryStringLengthTarget">
                             </span>
                         </p>
-                    </div>
-                    <div>
-                        <h3>Other Stats</h3>
                         <p>
                             <b>Percentage Of Unique Characters:</b>
                             <span class="simplePass_uniqueCharactersPercentageTarget">
                             </span>
                         </p>
+                        <div>
+                            <h4>Compression Stats:</h4>
+                            <p><em>Higher is better.</em></p>
+                            <p>
+                                <b>GZIP:</b>
+                                <span class="simplePass_gzipCompressionTarget"></span>
+                            </p>
+                            <p>
+                                <b>Deflate:</b>
+                                <span class="simplePass_deflateCompressionTarget"></span>
+                            </p>
+                            <p>
+                                <b>Deflate-Raw:</b>
+                                <span class="simplePass_deflate-rawCompressionTarget"></span>
+                            </p>
+                            <p>
+                                <b>Average:</b>
+                                <span class="simplePass_averageCompressionTarget"></span>
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
