--- a/site/prod/index.html
+++ b/site/prod/index.html
@@ -129,6 +129,9 @@
         <link type="text/css"
             rel="stylesheet"
             href="./main.css">
+
+        <link href=./manifest.json
+            rel=manifest>
     </head>
 
     <body>
